[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/msgBase/msgBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/option/option.gd" type="Script" id=2]

[node name="option" instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -189.0
margin_top = -167.0
margin_right = 189.0
margin_bottom = 236.0
window_title = "菜单"
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.5
margin_top = -154.0
margin_right = 71.5
margin_bottom = 154.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tuPu" type="Button" parent="VBoxContainer" index="0"]
margin_right = 163.0
margin_bottom = 52.3754
text = "生物图谱"

[node name="tuPu2" type="Button" parent="VBoxContainer" index="1"]
margin_top = 56.0
margin_right = 163.0
margin_bottom = 108.375
text = "装备图鉴"

[node name="tuPu3" type="Button" parent="VBoxContainer" index="2"]
margin_top = 112.0
margin_right = 163.0
margin_bottom = 164.375
text = "公共状态"

[node name="tuPu4" type="Button" parent="VBoxContainer" index="3"]
margin_top = 168.0
margin_right = 163.0
margin_bottom = 220.375
text = "设置"

[node name="tuoxian" type="Button" parent="VBoxContainer" index="4"]
margin_top = 224.0
margin_right = 163.0
margin_bottom = 276.375
text = "投降结算"

[node name="tile" type="Button" parent="VBoxContainer" index="5"]
margin_top = 280.0
margin_right = 163.208
margin_bottom = 332.375
text = "返回标题(保存)"
[connection signal="pressed" from="VBoxContainer/tuPu" to="." method="_on_tuPu_pressed"]
[connection signal="pressed" from="VBoxContainer/tuPu2" to="." method="_on_tuPu2_pressed"]
[connection signal="pressed" from="VBoxContainer/tuPu3" to="." method="_on_tuPu3_pressed"]
[connection signal="pressed" from="VBoxContainer/tuPu4" to="." method="_on_tuPu4_pressed"]
[connection signal="pressed" from="VBoxContainer/tuoxian" to="." method="_on_tuoxian_pressed"]
[connection signal="pressed" from="VBoxContainer/tile" to="." method="_on_Button_pressed"]
